refactor: Da classe PatienteController e PatientDto, para remover o uso do MapStruct